# Qr_code

./: README.md
codes_qr/: pyproject.toml  qr_code.py  qr_code_amasing.py  qr_code_email.py
